--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,800;0,900;1,400;1,600;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        font-family: 'Montserrat', sans-serif;
+    }
+}
+
+@layer components {
+    .input:focus,
+    .select:focus {
+        @apply outline-none;
+    }
+}
